--- a/StormWeb/Views/Event/Details.cshtml
+++ b/StormWeb/Views/Event/Details.cshtml
@@ -12,22 +12,22 @@
     
     <div class="display-label">Appointment with</div>
     <div class="display-field">
-        @Html.DisplayFor(model => model.client.GivenName)
+       @* @Html.DisplayFor(model => model.client.GivenName)*@
     </div>
     <br />
     <div class="display-label">Venue</div>
     <div class="display-field">
-        @Html.TextAreaFor(model => model.add)
+@*        @Html.TextAreaFor(model => model.add)*@
     </div>
      <br />
     <div class="display-label">DateTime</div>
     <div class="display-field">
-        @Html.DisplayFor(model => model.appointment.AppDateTime)
+       @* @Html.DisplayFor(model => model.appointment.AppDateTime)*@
     </div>
      <br />
     <div class="display-label">Comments</div>
     <div class="display-field">
-        @Html.DisplayFor(model => model.appointment.Comments)
+      @*  @Html.DisplayFor(model => model.appointment.Comments)*@
     </div>
 
 </fieldset>
