--- a/StormWeb/Views/StudentCentre/Student.cshtml
+++ b/StormWeb/Views/StudentCentre/Student.cshtml
@@ -228,10 +228,14 @@
     }
 </div>
         </div>
+        <div class="span4" style="margin-left: 10;">    
+       @Html.Partial("~/Views/Event/Partial/_ScrollingEvent.cshtml", (IEnumerable<StormWeb.Models.Event>)ViewBag.eve)
+    </div>
         <div class="span4">
             @Html.Partial("CounsellorDetails")            
             @Html.Partial("~/Views/Advertisement/Partial/_ScrollingMarketing.cshtml", (IEnumerable<StormWeb.Models.Advertisement>) ViewBag.Ads)
         </div>
+        
     </div>
 </div>
 
