--- a/StormWeb/Views/Advertisement/Create.cshtml
+++ b/StormWeb/Views/Advertisement/Create.cshtml
@@ -25,6 +25,7 @@
 
 <script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
+<BODY id=":d" class="editable LW-avf" style="min-width:0;" hidefocus="true" g_editable="true">
  @using (Html.BeginForm("Create", "Advertisement", FormMethod.Post, new { enctype = "multipart/form-data" }))
  {
     
@@ -107,5 +108,6 @@
     </div>
 </div>
                           }
+                          </BODY>
 
 
