--- a/StormWeb/Views/Document/Partial/_DocumentStep.cshtml
+++ b/StormWeb/Views/Document/Partial/_DocumentStep.cshtml
@@ -503,7 +503,7 @@
                                             <button type="button" class="close" data-dismiss="modal">
                                                 ×</button>
                                             <h3>
-                                                Delete Branch Details @Model.app.Application_Id</h3>
+                                                Delete Payment Details</h3>
                                         </div>
                                         <div class="modal-body">
                                             <p>
